<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_gravity="bottom"
	android:background="@drawable/lib_rate_dialog_bg"
	android:layout_height="wrap_content">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/dp_10">

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:background="@drawable/lib_rate_mine_feedback"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/dialog_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:text="@string/lib_rate_lib_feedback"
			android:textColor="@color/lib_rate_dialog_message_text_color"
			android:textSize="@dimen/sp_20"
			android:textStyle="bold"
			android:fontFamily="@string/lib_rate_roboto_medium"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/icon"/>

		<androidx.appcompat.widget.AppCompatEditText
			android:id="@+id/et_feedback"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/lib_rate_background"
			android:gravity="top"
			android:hint="@string/lib_rate_feedback_write"
			android:lines="4"
			android:alpha="0.4"
			android:textColorHint="@color/lib_rate_dialog_message_text_color"
			android:padding="@dimen/dp_10"
			android:layout_margin="@dimen/dp_15"
			android:textSize="@dimen/sp_17"
			android:fontFamily="@string/lib_rate_roboto_medium"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/dialog_title"/>


		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/et_feedback"
			android:layout_marginStart="@dimen/dp_32"
			android:layout_marginLeft="@dimen/dp_32"
			android:layout_marginTop="@dimen/dp_18"
			android:layout_marginEnd="@dimen/dp_32"
			android:layout_marginRight="@dimen/dp_32"
			android:layout_marginBottom="@dimen/dp_32"
			android:background="@drawable/lib_rate_button_bg"
			android:gravity="right|center_vertical|center_horizontal|center|end"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/lib_feedback_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/dp_16"
				android:layout_marginTop="@dimen/dp_2"
				android:layout_marginEnd="@dimen/dp_16"
				android:layout_marginBottom="@dimen/dp_2"
				android:background="?attr/selectableItemBackground"
				android:fontFamily="@string/lib_rate_roboto_medium"
				android:gravity="center"
				android:minHeight="@dimen/dp_48"
				android:text="@string/lib_rate_btn_rate"
				android:textAllCaps="true"
				android:textColor="@color/lib_rate_button_text_color"
				android:textSize="@dimen/sp_18"
				app:autoSizeMaxTextSize="@dimen/sp_18"
				app:autoSizeMinTextSize="@dimen/sp_10"
				app:autoSizeStepGranularity="1sp"
				app:autoSizeTextType="uniform" />

		</androidx.appcompat.widget.LinearLayoutCompat>


	</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
